--- a/apps/wallet/instance/src/main/res/layout/fragment_swap_settings.xml
+++ b/apps/wallet/instance/src/main/res/layout/fragment_swap_settings.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <uikit.widget.HeaderView
+    <uikit.widget.ModalHeader
         android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:action="@drawable/ic_close_16"
-        android:title="@string/settings"
+        android:text="@string/settings"
         app:ignoreSystemOffset="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
