--- a/ui/uikit/core/src/main/res/layout/view_modal_header.xml
+++ b/ui/uikit/core/src/main/res/layout/view_modal_header.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_height="@dimen/barHeight"
+    tools:layout_width="match_parent"
+    tools:paddingHorizontal="@dimen/offsetMedium"
+    tools:parentTag="uikit.widget.RowLayout">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/modal_header_title"
@@ -8,7 +13,8 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:textAppearance="@style/TextAppearance.H3"
-        android:textColor="?attr/textPrimaryColor"/>
+        android:textColor="?attr/textPrimaryColor"
+        tools:text="Title" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/modal_header_close"
