--- a/apps/wallet/instance/src/main/res/layout/fragment_send_amount.xml
+++ b/apps/wallet/instance/src/main/res/layout/fragment_send_amount.xml
@@ -47,7 +47,7 @@
                     android:fontFamily="@font/montserrat_semi_bold"
                     android:textColor="?attr/textPrimaryColor"
                     android:textCursorDrawable="@drawable/cursor"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:text="0"
                     android:hint="0"
                     app:layout_constraintStart_toStartOf="parent"
