--- a/apps/wallet/instance/src/main/res/values/styleable.xml
+++ b/apps/wallet/instance/src/main/res/values/styleable.xml
@@ -8,4 +8,8 @@
         <attr name="android:title" format="string|reference" />
         <attr name="android:icon" format="reference" />
     </declare-styleable>
+
+    <declare-styleable name="AmountInput">
+        <attr name="android:gravity" />
+    </declare-styleable>
 </resources>
